--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!-- aos library -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        disable: window.innerWidth < 1024,
+      });
     </script>
   </body>
 </html>
